--- a/Cadre/Web.config
+++ b/Cadre/Web.config
@@ -21,9 +21,9 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <!--<modules>
+    <modules>
       <add name="BasicAuthHttpModule" type="Cadre.BasicAuthHttpModule, Cadre" />
-    </modules>-->
+    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
