--- a/Cadre/Cadre.csproj
+++ b/Cadre/Cadre.csproj
@@ -142,16 +142,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CSS\font-awesome.min.css" />
-    <Content Include="CSS\metisMenu.min.css" />
     <Content Include="CSS\sb-admin-2.css" />
     <Content Include="CSS\site.css" />
-    <Content Include="CSS\timeline.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\application.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\date.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
@@ -163,11 +162,8 @@
     <Content Include="Views\AllPosts.html" />
     <Content Include="Views\AllUsers.html" />
     <Content Include="Views\index.html" />
-    <Content Include="Views\LandingPage.html" />
     <Content Include="Views\Reply.html" />
-    <Content Include="Views\Shared\header.html" />
     <Content Include="Views\Shared\nav.html" />
-    <Content Include="Views\Shared\_Layout.html" />
     <Content Include="Views\UserAccount.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
