--- a/Cadre/Cadre.csproj
+++ b/Cadre/Cadre.csproj
@@ -161,8 +161,10 @@
     <Content Include="Views\AddPost.html" />
     <Content Include="Views\AllPosts.html" />
     <Content Include="Views\AllUsers.html" />
+    <Content Include="Views\EmailFormat.html" />
     <Content Include="Views\index.html" />
     <Content Include="Views\Reply.html" />
+    <Content Include="Views\SendEmails.html" />
     <Content Include="Views\Shared\nav.html" />
     <Content Include="Views\UserAccount.html" />
     <Content Include="Web.config">
@@ -178,12 +180,13 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostController.cs" />
-    <Compile Include="EmailBodyBuilder.cs" />
+    <Compile Include="DigestBodyBuilder.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="IEmailBodyBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReminderBodyBuilder.cs" />
     <Compile Include="ViewModels\AddPostViewModel.cs" />
     <Compile Include="ViewModels\AuthenticateViewModel.cs" />
     <Compile Include="ViewModels\PostViewModel.cs" />
